--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,11 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "react": "^18.1.0",
+    "react-dimmer": "^1.0.7",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
